--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,89 +1,84 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300);
 
 html, #app {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  height: 100%;
-  max-height: 100%;
-  position: relative;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    height: 100%;
+    max-height: 100%;
+    position: relative;
 }
 
 #toolbar {
-  float: left;
-  width: 80px;
-  height: 100%;
-  background-color: #30414d;
-  color: #767676;
-  padding: 35px 25px 25px 25px;
+    float: left;
+    width: 80px;
+    height: 100%;
+    background-color: #30414d;
+    color: #767676;
+    padding: 35px 25px 25px 25px;
 }
 
 #toolbar i {
-  font-size: 30px;
-  margin-bottom: 35px;
-  cursor: pointer;
-  opacity: 0.8;
-  transition: opacity 0.5s ease;
+    font-size: 30px;
+    margin-bottom: 35px;
+    cursor: pointer;
+    opacity: 0.8;
+    transition: opacity 0.5s ease;
 }
 
 #toolbar i:hover {
-  opacity: 1;
+    opacity: 1;
 }
 
 #notes-list {
-  float: left;
-  width: 300px;
-  height: 100%;
-  background-color: #f5f5f5;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 400;
+    float: left;
+    width: 300px;
+    height: 100%;
+    background-color: #f5f5f5;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 400;
+    border-right: 1px solid #F9FAFC;
 }
 
 #list-header {
-  padding: 5px 25px 25px 25px;
+    padding: 5px 25px 25px 25px;
 }
 
 #list-header h2 {
-  font-weight: 300;
-  text-transform: uppercase;
-  text-align: center;
-  font-size: 22px;
-  padding-bottom: 8px;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 22px;
+    padding-bottom: 8px;
 }
 
 #notes-list .container {
-  height: calc(100% - 137px);
-  max-height: calc(100% - 137px);
-  overflow: auto;
-  width: 100%;
-  padding: 0;
+    height: calc(100% - 137px);
+    max-height: calc(100% - 137px);
+    overflow: auto;
+    width: 100%;
+    padding: 0;
 }
 
 #notes-list .container .list-group-item {
-  border: 0;
-  border-radius: 0;
+    border: 0;
+    border-radius: 0;
 }
 
 .list-group-item-heading {
-  font-weight: 300;
-  font-size: 15px;
+    font-weight: 300;
+    font-size: 15px;
 }
 
 #note-editor {
-  height: 100%;
-  margin-left: 380px;
-}
-
-#note-editor textarea {
-  height: 100%;
-  border: 0;
-  border-radius: 0;
+    height: 100%;
+    margin-left: 380px;
 }
 
 .starred {
-  color: #F7AE4F;
+    color: #F7AE4F;
 }
